--- a/projects/doc-makerfaire/profile/form.html
+++ b/projects/doc-makerfaire/profile/form.html
@@ -69,7 +69,7 @@
 
             <!-- Questions -->
             <fieldset>
-                <textarea placeholder="What intrigued you to Design and why did you choose the field you are in now?" tabindex="8" id="q1" name="q1" required></textarea>
+                <textarea placeholder="What intrigued you to Design and why did you choose the field you are in now?" tabindex="8" id="q1" name="q1 required"></textarea>
             </fieldset>
 
             <fieldset>
@@ -84,7 +84,11 @@
                 <textarea placeholder="How can design be more accommodating to underrepresented populations of people?" tabindex="11" id="q4" name="q4" required></textarea>
             </fieldset>
 
-            <button type="submit"><a href="../submission/submission.html">Submit</a></button>
+            <fieldset>
+                <textarea placeholder="How can design be more accommodating to underrepresented populations of people?" tabindex="12" id="q5" name="q5" required></textarea>
+            </fieldset>
+            <button type="submit">Submit</button>
+            <div class="alert">Thank you! Your Submission has been saved and will need time to process. It will not show up immediately on the map, but hopefully for the next version. </div>
 
         </form>
     </div>
